# openpi

./: .gitignore  episode_dirs.txt  pyproject.toml  svo_list.txt
scripts/: sonata_weight_gen.py  train.py
src/openpi/models/: __init__.py  model.py  pi0_fast.py  pi0_fast_sonata.py  sonata_encoder.py  tokenizer.py
src/openpi/training/: config.py  data_loader.py
src/openpi/training/configs/: pi0_fast_sonata.py
